# eth-hub

./: .pre-commit-config.yaml  Justfile  README.md  pyproject.toml
.github/: dependabot.yaml  pre-commit-config.yaml
.github/workflows/: release.yaml  run-tests.yaml
src/eth_hub/: __init__.py  base_key_storage.py  signatureinfo.py
src/eth_hub/aws/: exceptions.py  key.py  key_store.py
src/eth_hub/aws/boto3_wrappers/: dto.py  exceptions.py  key.py  metadata.py  signature.py
tests/: conftest.py
tests/aws/: aws_mock.py  conftest.py  test_create_key.py  test_get_key.py  test_metadata.py  test_remove_key.py  test_sign.py
tests/aws/wrapper/: conftest.py  test_create_key_item.py  test_metadata.py  test_signature.py
tests/local/: conftest.py  test_create_key.py  test_import_key.py
